template instead of script

--- a/roles/dynamicInfoblox/templates/create-authoritative-reverse-zone.sh.j2
+++ b/roles/dynamicInfoblox/templates/create-authoritative-reverse-zone.sh.j2
@@ -7,5 +7,5 @@
 # Copyright (C) 2018 Infoblox. All Rights Reserved.
 
 curl -k -u admin:infoblox -H 'Content-Type:application/json' \
- -X POST 'https://192.168.1.2/wapi/v2.6/zone_auth' \
+ -X POST 'https://{{ nios_provider.host }}/wapi/v2.6/zone_auth' \
  --data '{"fqdn":"192.168.1.0/24","zone_format":"IPV4"}'
