--- a/roles/dynamicInfoblox/templates/create-authoritative-reverse-zone.sh.j2
+++ b/roles/dynamicInfoblox/templates/create-authoritative-reverse-zone.sh.j2
@@ -2,10 +2,10 @@
 
 # Lab 6 Task 1 Solution
 #
-# This script uses curl to create the authoritative reverse zone for 192.168.1.0/24
+# This script uses curl to create the authoritative reverse zone for {{ ansible_subnet }}
 #
 # Copyright (C) 2018 Infoblox. All Rights Reserved.
 
-curl -k -u admin:infoblox -H 'Content-Type:application/json' \
+curl -k -u {{ nios_user }}:{{ nios.password }} -H 'Content-Type:application/json' \
  -X POST 'https://{{ nios_provider.host }}/wapi/v2.6/zone_auth' \
- --data '{"fqdn":"192.168.1.0/24","zone_format":"IPV4"}'
+ --data '{"fqdn":"{{ ansible_subnet }}","zone_format":"IPV4"}'
