--- a/roles/dynamicInfoblox/templates/create-authoritative-reverse-zone.sh.j2
+++ b/roles/dynamicInfoblox/templates/create-authoritative-reverse-zone.sh.j2
@@ -7,5 +7,5 @@
 # Copyright (C) 2018 Infoblox. All Rights Reserved.
 
 curl -k -u {{ nios_provider.username }}:{{ nios_provider.password }} -H 'Content-Type:application/json' \
- -X POST 'https://{{ nios_provider.host }}/wapi/v2.6/zone_auth' \
+ -X POST 'https://{{ nios_provider.host }}/wapi/{{ wapi_version }}/zone_auth' \
  --data '{"fqdn":"{{ ansible_subnet }}","zone_format":"IPV4"}'
